bug fix on symbolic and magnitude edge toggle

--- a/demo.html
+++ b/demo.html
@@ -16,8 +16,7 @@
 
     <link rel="stylesheet" href="sfg_style.css">
 
-    <script src="sfg.json"></script>
-    <script src="sfg_script.js"></script>
+    <script src="sfg_script.js" defer></script>
 
     <!-- bode plots -->
 
@@ -40,8 +39,11 @@
 
   <body>
     <div id="sfg-extra">
-        <p> Switch to magnitude</p>
-        <input type="checkbox" id="feature-toggle">
+        <div> Magnitude / Symbolic Toggle </div>
+        <div>
+          <input type="checkbox" id="feature-toggle">
+        </div>
+        
         <!-- <section id="feature-toggle"> Toggle switch </section> -->
     </div>
 
