--- a/demo.html
+++ b/demo.html
@@ -8,9 +8,6 @@
 
     <script src="https://unpkg.com/cytoscape/dist/cytoscape.min.js"></script>
 
-    <!-- for testing with local version of cytoscape.js -->
-    <!--<script src="../cytoscape.js/build/cytoscape.js"></script>-->
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.js"></script>
     <script src="cytoscape-edgehandles.js"></script>
 
@@ -19,7 +16,6 @@
     <script src="sfg_script.js" defer></script>
 
     <!-- bode plots -->
-
     <meta charset="UTF-8">
 
     <!-- Math.js cdn -->
@@ -32,9 +28,9 @@
     <script src="bode_script.js"></script>
 
     <!-- LaTex display -->
-    <script type="text/javascript" id="MathJax-script" async
-      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-    </script>
+    <!-- <script type="text/javascript" id="MathJax-script" async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+    </script> -->
   </head>
 
   <body>
@@ -62,21 +58,18 @@
 
 
       <div class="parameter-panel">
-        <h1> Circuit Parameters </h1>
-        <form>
-          <label for="r1">r1 value:</label><br>
-          <input type="text" id="r1" name="r1"><br>
-          <label for="lname">c1 value:</label><br>
-          <input type="text" id="c1" name="c1"><br>
-          <input type="submit" value="Submit">
-        </form>
+        <div id="param-form"> 
+          <h1> Circuit Parameters </h1>
+        </div>
+        <div id="transfer-form">
+          <h1> Transfer Function Parameters </h1>
+        </div>
       </div>
 
       <div class="right-layer"> 
-        
         <div class="transfer-panel">  
           <h1> Transfer Funtion: </h1>
-          <h1> H = 1/s </h1>  
+          <div id="trans-funtion"></div>
         </div>
 
         <div class = "bode-section">
